@@ -85,56 +85,83 @@ public class LabeledSecretWithProfileConfigurationStub {
 
 		// is found by labels
 		V1Secret colorSecret = new V1SecretBuilder()
-				.withMetadata(new V1ObjectMetaBuilder().withName("color-secret").withNamespace("spring-k8s")
-						.withLabels(Map.of("color", "blue")).build())
-				.addToData(Collections.singletonMap("one", "1".getBytes(StandardCharsets.UTF_8))).build();
+			.withMetadata(new V1ObjectMetaBuilder().withName("color-secret")
+				.withNamespace("spring-k8s")
+				.withLabels(Map.of("color", "blue"))
+				.build())
+			.addToData(Collections.singletonMap("one", "1".getBytes(StandardCharsets.UTF_8)))
+			.build();
 
 		// is not taken, since "profileSpecificSources=false" for the above
 		V1Secret colorSecretK8s = new V1SecretBuilder()
-				.withMetadata(new V1ObjectMetaBuilder().withName("color-secret-k8s").withNamespace("spring-k8s")
-						.withLabels(Map.of("color", "not-blue")).build())
-				.addToData(Collections.singletonMap("five", "5".getBytes(StandardCharsets.UTF_8))).build();
+			.withMetadata(new V1ObjectMetaBuilder().withName("color-secret-k8s")
+				.withNamespace("spring-k8s")
+				.withLabels(Map.of("color", "not-blue"))
+				.build())
+			.addToData(Collections.singletonMap("five", "5".getBytes(StandardCharsets.UTF_8)))
+			.build();
 
 		// is found by labels
 		V1Secret greenSecret = new V1SecretBuilder()
-				.withMetadata(new V1ObjectMetaBuilder().withName("green-secret").withNamespace("spring-k8s")
-						.withLabels(Map.of("color", "green")).build())
-				.addToData(Collections.singletonMap("two", "2".getBytes(StandardCharsets.UTF_8))).build();
+			.withMetadata(new V1ObjectMetaBuilder().withName("green-secret")
+				.withNamespace("spring-k8s")
+				.withLabels(Map.of("color", "green"))
+				.build())
+			.addToData(Collections.singletonMap("two", "2".getBytes(StandardCharsets.UTF_8)))
+			.build();
 
 		V1Secret greenSecretK8s = new V1SecretBuilder()
-				.withMetadata(new V1ObjectMetaBuilder().withName("green-secret-k8s").withNamespace("spring-k8s")
-						.withLabels(Map.of("color", "green-k8s")).build())
-				.addToData(Collections.singletonMap("six", "6".getBytes(StandardCharsets.UTF_8))).build();
+			.withMetadata(new V1ObjectMetaBuilder().withName("green-secret-k8s")
+				.withNamespace("spring-k8s")
+				.withLabels(Map.of("color", "green-k8s"))
+				.build())
+			.addToData(Collections.singletonMap("six", "6".getBytes(StandardCharsets.UTF_8)))
+			.build();
 
 		// is taken because prod profile is active and "profileSpecificSources=true"
 		V1Secret shapeSecretProd = new V1SecretBuilder()
-				.withMetadata(new V1ObjectMetaBuilder().withName("green-secret-prod").withNamespace("spring-k8s")
-						.withLabels(Map.of("color", "green-prod")).build())
-				.addToData(Collections.singletonMap("seven", "7".getBytes(StandardCharsets.UTF_8))).build();
+			.withMetadata(new V1ObjectMetaBuilder().withName("green-secret-prod")
+				.withNamespace("spring-k8s")
+				.withLabels(Map.of("color", "green-prod"))
+				.build())
+			.addToData(Collections.singletonMap("seven", "7".getBytes(StandardCharsets.UTF_8)))
+			.build();
 
 		// not taken
 		V1Secret redSecret = new V1SecretBuilder()
-				.withMetadata(new V1ObjectMetaBuilder().withName("red-secret").withNamespace("spring-k8s")
-						.withLabels(Map.of("color", "not-red")).build())
-				.addToData(Collections.singletonMap("three", "3".getBytes(StandardCharsets.UTF_8))).build();
+			.withMetadata(new V1ObjectMetaBuilder().withName("red-secret")
+				.withNamespace("spring-k8s")
+				.withLabels(Map.of("color", "not-red"))
+				.build())
+			.addToData(Collections.singletonMap("three", "3".getBytes(StandardCharsets.UTF_8)))
+			.build();
 
 		// not taken
 		V1Secret yellowSecret = new V1SecretBuilder()
-				.withMetadata(new V1ObjectMetaBuilder().withName("yellow-secret").withNamespace("spring-k8s")
-						.withLabels(Map.of("color", "not-yellow")).build())
-				.addToData(Collections.singletonMap("four", "4".getBytes(StandardCharsets.UTF_8))).build();
+			.withMetadata(new V1ObjectMetaBuilder().withName("yellow-secret")
+				.withNamespace("spring-k8s")
+				.withLabels(Map.of("color", "not-yellow"))
+				.build())
+			.addToData(Collections.singletonMap("four", "4".getBytes(StandardCharsets.UTF_8)))
+			.build();
 
 		// is found by labels
 		V1Secret greenPurpleSecret = new V1SecretBuilder()
-				.withMetadata(new V1ObjectMetaBuilder().withName("green-purple-secret").withNamespace("spring-k8s")
-						.withLabels(Map.of("color", "green", "shape", "round")).build())
-				.addToData(Collections.singletonMap("eight", "8".getBytes(StandardCharsets.UTF_8))).build();
+			.withMetadata(new V1ObjectMetaBuilder().withName("green-purple-secret")
+				.withNamespace("spring-k8s")
+				.withLabels(Map.of("color", "green", "shape", "round"))
+				.build())
+			.addToData(Collections.singletonMap("eight", "8".getBytes(StandardCharsets.UTF_8)))
+			.build();
 
 		// is taken and thus overrides the above
 		V1Secret greenPurpleSecretK8s = new V1SecretBuilder()
-				.withMetadata(new V1ObjectMetaBuilder().withName("green-purple-secret-k8s").withNamespace("spring-k8s")
-						.withLabels(Map.of("color", "black")).build())
-				.addToData(Collections.singletonMap("eight", "eight-ish".getBytes(StandardCharsets.UTF_8))).build();
+			.withMetadata(new V1ObjectMetaBuilder().withName("green-purple-secret-k8s")
+				.withNamespace("spring-k8s")
+				.withLabels(Map.of("color", "black"))
+				.build())
+			.addToData(Collections.singletonMap("eight", "eight-ish".getBytes(StandardCharsets.UTF_8)))
+			.build();
 
 		// the actual stub for CoreV1Api calls
 		V1SecretList secrets = new V1SecretList();
@@ -149,7 +176,7 @@ public class LabeledSecretWithProfileConfigurationStub {
 		secrets.addItemsItem(greenPurpleSecretK8s);
 
 		WireMock.stubFor(WireMock.get("/api/v1/namespaces/spring-k8s/secrets")
-				.willReturn(WireMock.aResponse().withStatus(200).withBody(new JSON().serialize(secrets))));
+			.willReturn(WireMock.aResponse().withStatus(200).withBody(new JSON().serialize(secrets))));
 	}
 
 }
